[package]
name = "ld51"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = {version = "0.8.1" } # , features = ["dynamic"]
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12" }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.83"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"


